@@ -18,15 +18,20 @@ import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.data.domain.*;
 import org.springframework.format.annotation.DateTimeFormat;
 import org.springframework.http.*;
+import org.springframework.security.core.Authentication;
+import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.stereotype.Controller;
+import org.springframework.transaction.annotation.Transactional;
 import org.springframework.ui.Model;
 import org.springframework.util.ResourceUtils;
+import org.springframework.util.StringUtils;
 import org.springframework.web.bind.annotation.*;
 import org.springframework.web.servlet.mvc.support.RedirectAttributes;
 import poly.edu.sneaker.DAO.HoaDonChiTietOnlCustom;
 import poly.edu.sneaker.DAO.HoaDonOnlCustom;
 import poly.edu.sneaker.Model.*;
 import poly.edu.sneaker.Service.*;
+import poly.edu.sneaker.Service.Implement.TrangThaiHelper;
 
 import java.io.ByteArrayOutputStream;
 import java.io.IOException;
@@ -38,6 +43,7 @@ import java.time.LocalTime;
 import java.time.ZoneId;
 import java.util.*;
 import java.util.List;
+import java.util.function.Function;
 import java.util.stream.Collectors;
 
 @CrossOrigin(origins = "*")
@@ -64,65 +70,45 @@ public class HoaDonOnlController {
     SizeService sizeService;
 
     @Autowired
+    KhuyenMaiService khuyenMaiService;
+    @Autowired
     LichSuTrnngThaiService lichSuTrnngThaiService;
 
     @Autowired
     BanHangTaiQuayService banHangTaiQuayService;
     @Autowired
     private HoaDonChiTietService hoaDonChiTietService;
+    @Autowired
+    private MauSacService mauSacService;
+    @Autowired
+    private ChatLieuService chatLieuService;
+    @Autowired
+    private DanhMucService danhMucService;
+    @Autowired
+    private HangService hangService;
+    @Autowired
+    private NhanVienService nhanVienService;
 
-
+    public String getCurrentUserEmail() {
+        Authentication authentication = SecurityContextHolder.getContext().getAuthentication();
+        if (authentication != null && authentication.isAuthenticated()) {
+            return authentication.getName(); // Trả về email của người dùng đã đăng nhập
+        }
+        return null; // Nếu chưa đăng nhập, trả về null hoặc giá trị mặc định
+    }
     @PostMapping("/MuaLai")
-    public ResponseEntity<?> muaLaiDonHang(@RequestBody int idHoaDon){
+    public ResponseEntity<?> muaLaiDonHang(@RequestParam int idHoaDon) {
 
         HoaDon hoaDon = hoaDonService.findById(idHoaDon);
-        if(hoaDon==null){
-            return ResponseEntity.badRequest().body(Map.of("message","Không tìm thấy hóa đơn"));
+        if (hoaDon == null) {
+            return ResponseEntity.badRequest().body(Map.of("message", "Không tìm thấy hóa đơn"));
         }
         HoaDon hoaDon1 = new HoaDon();
-        if(hoaDon.getIdNhanVien()!=null){
-            hoaDon1.setIdNhanVien(hoaDon.getIdNhanVien());
-        }
-        if(hoaDon.getIdKhachHang()!=null){
-            hoaDon1.setIdKhachHang(hoaDon.getIdKhachHang());
-        }
-        List<ChiTietSanPham> chiTietSanPhamHetHang= new ArrayList<>();
-        List<ChiTietSanPham> chiTietSanPhamKhongDu = new ArrayList<>();
-        float tongTien = 0;
-        List<HoaDonChiTiet> hoaDonChiTiets = hoaDonChiTietOnlService.findHoaDonChiTietByHoaDonId(hoaDon.getId());
-        for (HoaDonChiTiet hd : hoaDonChiTiets) {
-            ChiTietSanPham chiTietSanPham = chiTietSanPhamService.findById(hd.getIdChiTietSanPham().getId());
-            int soLuongTon = chiTietSanPham.getSoLuong();
-            int soLuongCan = hd.getSoLuong();
-            if (soLuongTon <= 0) {
-                chiTietSanPhamHetHang.add(hd.getIdChiTietSanPham());
-                continue;
-            }
-            HoaDonChiTiet hd1 = new HoaDonChiTiet();
-            hd1.setIdHoaDon(hoaDon1);
-            if(soLuongCan>soLuongTon){
-                hd1.setSoLuong(Math.min(soLuongCan, soLuongTon));
-                chiTietSanPhamKhongDu.add(hd1.getIdChiTietSanPham());
-            }else{
-                hd1.setSoLuong(soLuongCan);
-            }
-            hd1.setIdChiTietSanPham(hd.getIdChiTietSanPham());
-            hd1.setTongTrongLuong(chiTietSanPham.getTrongLuong()*chiTietSanPham.getSoLuong());
-            hd1.setDonGia(chiTietSanPham.getGiaBan());
-            hd1.setGhiChu("Đơn hàng mua lại từ hóa đơn"+hd1.getIdHoaDon().getMaHoaDon());
-            hd1.setNgayTao(new Date());
-            hd1.setNgaySua(new Date());
-            hd1.setTrangThai(1);
-            hoaDonChiTietService.saveHoaDonChiTiet(hd1);
-            tongTien += hd1.getSoLuong()*hd1.getDonGia();
-        }
         hoaDon1.setMaHoaDon(hoaDonService.taoMaHoaDon());
-        hoaDon1.setThanhTien(0);
-        hoaDon1.setGhiChu("Mua lại hoa đơn"+hoaDon.getMaHoaDon());
+        hoaDon1.setGhiChu("Mua lại hoa đơn" + hoaDon.getMaHoaDon());
         hoaDon1.setNgayTao(new Date());
         hoaDon1.setNgaySua(new Date());
         hoaDon1.setTienKhachDua(0);
-        hoaDon1.setTongTien(0);
         hoaDon1.setTienThua(0);
         hoaDon1.setTongTienGiam(0);
         hoaDon1.setDonViGiaoHang(hoaDon.getDonViGiaoHang());
@@ -134,21 +120,76 @@ public class HoaDonOnlController {
         hoaDon1.setTinhThanhPho(hoaDon.getTinhThanhPho());
         hoaDon1.setQuanHuyen(hoaDon.getQuanHuyen());
         hoaDon1.setPhuongXa(hoaDon.getPhuongXa());
-        hoaDon1.setLoaiHoaDon(hoaDon.getLoaiHoaDon());
-        hoaDon1.setLoaiThanhToan(hoaDon.getLoaiThanhToan());
+        hoaDon1.setLoaiHoaDon(true);
+        hoaDon1.setLoaiThanhToan(false);
         hoaDon1.setTrangThai(2);
-        hoaDon1.setTongTien(tongTien);
-        hoaDon1.setThanhTien(tongTien+hoaDon1.getPhiShip());
         hoaDonService.save(hoaDon1);
-        return ResponseEntity.ok().body(Map.of("message","Mua lại thành công","URL","hoadononline/detailhoadononlinect/"+hoaDon1.getId(),"spHet "+chiTietSanPhamHetHang.size(),"spKhongDu"+chiTietSanPhamKhongDu.size()));
+
+        NhanVien nhanVien = nhanVienService.getNhanVienByEmail(getCurrentUserEmail());
+        if(nhanVien!=null){
+            hoaDon1.setIdNhanVien(nhanVien);
+        }
+        if (hoaDon.getIdKhachHang() != null) {
+            hoaDon1.setIdKhachHang(hoaDon.getIdKhachHang());
+        }
+
+        float tongTien = 0;
+        List<HoaDonChiTiet> hoaDonChiTiets = hoaDonChiTietOnlService.findHoaDonChiTietByHoaDonId(hoaDon.getId());
+        // Gộp các HoaDonChiTiet theo idChiTietSanPham
+        Map<Integer, HoaDonChiTiet> gopChiTietMap = new HashMap<>();
+
+        for (HoaDonChiTiet hd : hoaDonChiTiets) {
+            int idCTSP = hd.getIdChiTietSanPham().getId();
+            HoaDonChiTiet daCo = gopChiTietMap.get(idCTSP);
+            if (daCo == null) {
+                // Clone đối tượng ban đầu (chỉ lấy những gì cần)
+                HoaDonChiTiet moi = new HoaDonChiTiet();
+                moi.setIdChiTietSanPham(hd.getIdChiTietSanPham());
+                moi.setSoLuong(hd.getSoLuong());
+                gopChiTietMap.put(idCTSP, moi);
+            } else {
+                daCo.setSoLuong(daCo.getSoLuong() + hd.getSoLuong());
+            }
+        }
+        for (HoaDonChiTiet hdGop : gopChiTietMap.values()) {
+            ChiTietSanPham chiTietSanPham = chiTietSanPhamService.findById(hdGop.getIdChiTietSanPham().getId());
+            HoaDonChiTiet hd1 = new HoaDonChiTiet();
+            hd1.setIdHoaDon(hoaDon1);
+            hd1.setIdChiTietSanPham(chiTietSanPham);
+            hd1.setSoLuong(hdGop.getSoLuong());
+            hd1.setTongTrongLuong(chiTietSanPham.getTrongLuong() * hd1.getSoLuong());
+            hd1.setDonGia(chiTietSanPham.getGiaBan());
+            hd1.setGhiChu("Đơn hàng mua lại từ hóa đơn " + hoaDon.getMaHoaDon());
+            hd1.setNgayTao(new Date());
+            hd1.setNgaySua(new Date());
+            hd1.setTrangThai(1);
+            hoaDonChiTietService.saveHoaDonChiTiet(hd1);
+            tongTien += hd1.getSoLuong() * hd1.getDonGia();
+        }
+        hoaDon1.setTongTien(tongTien);
+        hoaDon1.setThanhTien(hoaDon1.getTongTien()+hoaDon.getPhiShip());
+
+        hoaDonService.save(hoaDon1);
+        TrangThaiDonHang trangThaiDonHang = new TrangThaiDonHang();
+        trangThaiDonHang.setIdHoaDon(hoaDon1);
+        trangThaiDonHang.setTrangThai(hoaDon1.getTrangThai());
+        trangThaiDonHang.setNgayCapNhat(new Date());
+        trangThaiDonHang.setGhiChu("Đơn hàng mua lại từ hóa đơn: "+hoaDon.getMaHoaDon()+" ngày "+hoaDon.getNgayTao());
+        lichSuTrnngThaiService.saveLichSuTrangThai(trangThaiDonHang);
+        return ResponseEntity.ok().body(Map.of("message", "Mua lại thành công", "URL", "hoadononline/detailhoadononlinect/" + hoaDon1.getId()));
     }
+
     @GetMapping("/hienthi")
     public String hienthi(Model model, @RequestParam(defaultValue = "0") int page) {
+<<<<<<< HEAD
         if (page < 0) {
             page = 0;
         }
         int size = 1;
 
+=======
+        int size = 5;
+>>>>>>> origin/master
         Pageable pageable = PageRequest.of(page, size, Sort.by(Sort.Direction.DESC, "ngayTao"));
 
         Page<HoaDonOnlCustom> listHoaDonTatCa = hoaDonOnlService.getHoaDonCustomTatCa(pageable);
@@ -223,7 +264,6 @@ public class HoaDonOnlController {
 
         NhanVien nv = new NhanVien();
         nv.setId(4);
-
         HoaDon hd = hoaDonOnlService.detailHD(id);
         hd.setTenNguoiGiao(tennguoigiao);
         hd.setSdtNguoiGiao(sdtnguoigiao);
@@ -249,20 +289,17 @@ public class HoaDonOnlController {
 
 
     @GetMapping("/detailhoadononlinect/{id}")
-    public String chitiethoadononline(@PathVariable int id, Model model, @RequestParam(defaultValue = "0") int page) {
-//
-//        HoaDonChiTiet hoaDonChiTiet = hoaDonChiTietOnlService.findHoaDonChiTietByIdHoaDon(id);
-//        model.addAttribute("hoaDonChiTiet", hoaDonChiTiet);
+    public String chitiethoadononline(@PathVariable int id, Model model, @RequestParam(defaultValue = "0") int page
+    ) {
+
         int size = 5;
         Pageable pageable = PageRequest.of(page, size);
         HoaDon hoaDon = hoaDonOnlService.detailHD(id);
         if (hoaDon == null) {
-            System.out.println("Lỗi: Không tìm thấy hóa đơn với ID " + id);
             return "redirect:/hoadononline/hienthi";
         }
         List<HoaDonChiTiet> chiTietHoaDon = hoaDonChiTietOnlService.findHoaDonChiTietByHoaDonId(id);
         if (chiTietHoaDon == null || chiTietHoaDon.isEmpty()) {
-            System.out.println("Lỗi: Không tìm thấy chi tiết hóa đơn cho ID " + id);
             return "redirect:/hoadononline/hienthi";
         }
         List<TrangThaiDonHang> lstTrangThaiDonHang = lichSuTrnngThaiService.getAllByIdHoaDon(id);
@@ -271,26 +308,47 @@ public class HoaDonOnlController {
         model.addAttribute("lichSuTrangThai", lstTrangThaiDonHang);
         model.addAttribute("chiTietHoaDon", chiTietHoaDon);
         model.addAttribute("hoaDon", hoaDon);
-
-        List<Size> lstSize = sizeService.findAll();
-        model.addAttribute("lstSize", lstSize);
-        Page<ChiTietSanPham> chiTietSanPhams = chiTietSanPhamService.findAll(pageable);
-
-// Lọc sản phẩm có số lượng > 0
-        List<ChiTietSanPham> sanPhamCoSoLuong = chiTietSanPhams.getContent()
-                .stream()
-                .filter(ctsp -> ctsp.getSoLuong() > 0)
+        List<MauSac> lstMauSac = mauSacService.findAll().stream()
+                .sorted(Comparator.comparing(MauSac::getTenMauSac, String.CASE_INSENSITIVE_ORDER))
                 .collect(Collectors.toList());
-
-// Chuyển lại thành Page
-        Page<ChiTietSanPham> sanPhamChiTiet = new PageImpl<>(sanPhamCoSoLuong, pageable, sanPhamCoSoLuong.size());
-
-        model.addAttribute("sanPhamChiTiet", sanPhamChiTiet);
-        model.addAttribute("currentPageCTSP", sanPhamChiTiet.getNumber());
-        model.addAttribute("totalPagesCTSP", sanPhamChiTiet.getTotalPages());
+        List<Size> lstSize = sizeService.findAll().stream().sorted((s1, s2) -> Integer.compare(
+                Integer.parseInt(s1.getTenSize()),
+                Integer.parseInt(s2.getTenSize())
+        )).collect(Collectors.toList());
+        List<ChatLieu> lstChatLieu = chatLieuService.getAllChatLieus().stream().sorted(Comparator.comparing(ChatLieu::getTenChatLieu, String.CASE_INSENSITIVE_ORDER)).collect(Collectors.toList());
+        List<DanhMuc> lstDanhMuc = danhMucService.getAllDanhMucs().stream().sorted(Comparator.comparing(DanhMuc::getTenDanhMuc, String.CASE_INSENSITIVE_ORDER)).collect(Collectors.toList());
+        List<Hang> lstHang = hangService.getAllHangs().stream().sorted(Comparator.comparing(Hang::getTenHang, String.CASE_INSENSITIVE_ORDER)).collect(Collectors.toList());
+        model.addAttribute("lstSize", lstSize);
+        model.addAttribute("lstMauSac", lstMauSac);
+        model.addAttribute("lstChatLieu", lstChatLieu);
+        model.addAttribute("lstDanhMuc", lstDanhMuc);
+        model.addAttribute("lstHang", lstHang);
         return "admin/hoa-don/detailhoadononline";
     }
 
+    @GetMapping("/detailhoadononlinect/{id}/products")
+    @ResponseBody
+    public ResponseEntity<Map<String, Object>> getProductsForModal(
+            @PathVariable int id,
+            @RequestParam(defaultValue = "0") int page,
+            @RequestParam(required = false) String keyword,
+            @RequestParam(required = false) Integer locTheoMauSac,
+            @RequestParam(required = false) Integer locTheoSize,
+            @RequestParam(required = false) Integer locTheoDanhMuc,
+            @RequestParam(required = false) Integer locTheoChatLieu,
+            @RequestParam(required = false) Integer locTheoHang,
+            @RequestParam(defaultValue = "5") int size) {
+        Page<ChiTietSanPham> sanPhamChiTiet = chiTietSanPhamService.findChiTietSanPhamJustOne(
+                keyword, locTheoHang, locTheoDanhMuc, locTheoChatLieu, locTheoMauSac, locTheoSize,
+                PageRequest.of(page, size)
+        );
+
+        Map<String, Object> response = new HashMap<>();
+        response.put("products", sanPhamChiTiet.getContent());
+        response.put("currentPage", sanPhamChiTiet.getNumber());
+        response.put("totalPages", sanPhamChiTiet.getTotalPages());
+        return ResponseEntity.ok(response);
+    }
 
     @PostMapping("/huydh/{id}")
     public String huydonhang(@PathVariable int id, @RequestParam(value = "ghichu", defaultValue = "trong") String ghichu,
@@ -336,8 +394,6 @@ public class HoaDonOnlController {
                                   @RequestParam("sdt") String sdt,
                                   @RequestParam("trangThai") Boolean trangThai
             , Model model) {
-        System.out.println("id khachhang" + id);
-
         KhachHang khachHang = new KhachHang();
         khachHang.setId(id);
         khachHang.setTenKhachHang(tenKhachHang);
@@ -355,29 +411,67 @@ public class HoaDonOnlController {
     public ResponseEntity<?> updateSoLuong(@RequestBody Map<String, Object> payload) {
         try {
             int idHoaDon = Integer.parseInt(payload.get("idHoaDon").toString());
-            HoaDon hoaDon = hoaDonService.findById(idHoaDon);
-            if(hoaDon.getTrangThai()!=2||hoaDon.getTrangThai()!=3){
-                return ResponseEntity.badRequest().body(Map.of("message","Hóa đơn không thể cập nhật"));
-            }
             int idHoaDonChiTiet = Integer.parseInt(payload.get("idHoaDonChiTiet").toString());
             int soLuongMoi = Integer.parseInt(payload.get("soLuongMoi").toString());
 
-            // Gọi service cập nhật số lượng
+            HoaDon hoaDon = hoaDonService.findById(idHoaDon);
+            if (hoaDon.getTrangThai() != 2 && hoaDon.getTrangThai() != 3) {
+                return ResponseEntity.badRequest().body(Map.of("message", "Hóa đơn  không thể cập nhật"));
+            }
+
             HoaDonChiTiet hoaDonChiTiet = hoaDonChiTietService.findHoaDonChiTietByID(idHoaDonChiTiet);
             ChiTietSanPham chiTietSanPham = chiTietSanPhamService.findById(hoaDonChiTiet.getIdChiTietSanPham().getId());
-            if (chiTietSanPham.getSoLuong() < soLuongMoi) {
+            // xử lí khi số lượng sản phảm trong kho không đủ
+            if (hoaDonChiTiet.getDonGia() != chiTietSanPham.getGiaBan()) {
+                return ResponseEntity.badRequest().body(Map.of("message", "Giá của " + chiTietSanPham.getIdSanPham().getTenSanPham() + " đã thay đổi."));
+            }
+            // xử lí khi sản phẩm không còn hoạt động
+            if (!chiTietSanPham.getTrangThai() || !chiTietSanPham.getIdSanPham().getTrangThai()) {
+                return ResponseEntity.badRequest().body(Map.of("message", "Sản phẩm " + chiTietSanPham.getIdSanPham().getTenSanPham() + " ngừng không còn hoạt động"));
+            }
+            List<HoaDonChiTiet> lstHdct = hoaDonChiTietOnlService.findHoaDonChiTietByHoaDonIdAndIdChiTietSanPham(idHoaDon, chiTietSanPham.getId());
+            int soLuongKhac = lstHdct.stream()
+                    .filter(hd -> hd.getId() != hoaDonChiTiet.getId())
+                    .mapToInt(HoaDonChiTiet::getSoLuong).sum();
+            int tongSoLuongMongMuon = soLuongMoi + soLuongKhac;
+
+            int soLuongSPTrongHoaDon = lstHdct.stream().mapToInt(HoaDonChiTiet::getSoLuong).sum();
+            // Tính tồn kho thực tế
+            int soLuongTon = hoaDon.getTrangThai() == 3
+                    ? chiTietSanPham.getSoLuong() + soLuongSPTrongHoaDon
+                    : chiTietSanPham.getSoLuong();
+            System.out.println("số lợng tồn tính được" + soLuongTon);
+            if (soLuongTon < tongSoLuongMongMuon) {
                 return ResponseEntity.badRequest().body(Map.of("message", "Số lượng sản phẩm trong kho không đủ"));
             }
+
+            //Cập nhật lại số lương ctsp nếu đang ở trang thái chờ lấy hàng
+            if (hoaDon.getTrangThai() == 3) {
+                int chenhlech = hoaDonChiTiet.getSoLuong() - soLuongMoi;
+                chiTietSanPham.setSoLuong(chiTietSanPham.getSoLuong() + chenhlech);
+                chiTietSanPhamService.saveChiTietSanPham(chiTietSanPham);
+            }
+            // Cập nhật số lượng mới cho hóa đơn chi tiết
             hoaDonChiTiet.setSoLuong(soLuongMoi);
             hoaDonChiTietService.saveHoaDonChiTiet(hoaDonChiTiet);
+
+            //Tính lại tổng tiền trong hoá đơn của khách
             List<HoaDonChiTiet> hoaDonChiTiets = hoaDonChiTietOnlService.findHoaDonChiTietByHoaDonId(idHoaDon);
-            float tongTienMoi = 0;
-            for (HoaDonChiTiet hdcts : hoaDonChiTiets) {
-                tongTienMoi += hdcts.getSoLuong() * hdcts.getDonGia();
+            double tongTienMoi = hoaDonChiTiets.stream()
+                    .mapToDouble(hdct -> hdct.getSoLuong() * hdct.getDonGia())
+                    .sum();
+
+            //xử lí tiền chênh lệch cho khách hàng với trường hợp đã thanh toán bằng vnpay
+            hoaDon.setTongTien((float) tongTienMoi);
+            hoaDonService.tinhLaiKhuyenMai(hoaDon);
+            HoaDon hoaDon2 = hoaDonService.findById(idHoaDon);
+            hoaDon2.setThanhTien((float) (tongTienMoi + hoaDon.getPhiShip() - hoaDon.getTongTienGiam()));
+            // Xử lý tiền chênh lệch khi thanh toán qua VNPay
+            if (hoaDon.getLoaiThanhToan()) {
+                float tienChenhLech = hoaDon.getTienKhachDua() - hoaDon.getThanhTien();
+                hoaDon.setTienThua(Math.max(tienChenhLech, 0));
             }
-            hoaDon.setTongTien(tongTienMoi);
-            hoaDon.setThanhTien(tongTienMoi - hoaDon.getTongTienGiam() + hoaDon.getPhiShip());
-            hoaDonService.save(hoaDon);
+            hoaDonService.save(hoaDon2);
             return ResponseEntity.ok(Map.of("success", true, "message", "Cập nhật thành công!"));
         } catch (Exception e) {
             return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR)
@@ -405,8 +499,6 @@ public class HoaDonOnlController {
                 idHoaDon = Integer.parseInt(payload.get("idHoaDon").toString());
                 idChiTietSanPham = Integer.parseInt(payload.get("idChiTietSanPham").toString());
                 soLuong = Integer.parseInt(payload.get("soLuong").toString());
-
-
                 // Kiểm tra trạng thái (nếu có)
                 if (payload.containsKey("trangThai")) {
                     trangThai = Integer.parseInt(payload.get("trangThai").toString());
@@ -419,22 +511,20 @@ public class HoaDonOnlController {
 
             // Tạo đối tượng HoaDon và ChiTietSanPham
             HoaDon hoaDon = hoaDonService.findById(idHoaDon);
-
             ChiTietSanPham chiTietSanPham = chiTietSanPhamService.findById(idChiTietSanPham);
             // Tạo đối tượng HoaDonChiTiet
             HoaDonChiTiet hoaDonChiTiet = new HoaDonChiTiet();
             hoaDonChiTiet.setIdHoaDon(hoaDon);
             hoaDonChiTiet.setIdChiTietSanPham(chiTietSanPham);
+            //số lượng mặc định là 1
             hoaDonChiTiet.setSoLuong(soLuong);
+            //giá bán mới nhất của sản phẩm
             hoaDonChiTiet.setDonGia(chiTietSanPham.getGiaBan());
-            hoaDonChiTiet.setTongTrongLuong(chiTietSanPham.getTrongLuong());
             hoaDonChiTiet.setNgayTao(new Date());
             hoaDonChiTiet.setNgaySua(new Date());
             hoaDonChiTiet.setTrangThai(trangThai);
-
             // Gọi Service để thêm hoặc cập nhật hóa đơn chi tiết
             boolean result = hoaDonChiTietOnlService.themSPCTVaoHDCT(hoaDonChiTiet);
-
             if (result) {
                 response.put("success", true);
                 response.put("message", "Cập nhật hóa đơn chi tiết thành công.");
@@ -444,9 +534,25 @@ public class HoaDonOnlController {
                     tongTienMoi += hoaDonChiTiet1.getDonGia() * hoaDonChiTiet1.getSoLuong();
                 }
                 hoaDon.setTongTien(tongTienMoi);
-                hoaDon.setThanhTien(tongTienMoi - hoaDon.getTongTienGiam() + hoaDon.getPhiShip());
                 hoaDon.setNgaySua(new Date());
-                hoaDonService.save(hoaDon);
+                //tinh lai khuyen mai khi thay doi so luong san pham
+                hoaDonService.tinhLaiKhuyenMai(hoaDon);
+                HoaDon hoaDon2 = hoaDonService.findById(idHoaDon);
+                hoaDon2.setThanhTien(tongTienMoi - hoaDon2.getTongTienGiam() + hoaDon2.getPhiShip());
+                float tienChenhLech = 0;
+                if (hoaDon2.getLoaiThanhToan()) {
+                    //tinh so tien chenh lech neu khach đã thanh toan bang vnpay
+                    tienChenhLech = hoaDon2.getTienKhachDua() - hoaDon2.getThanhTien();
+                    if (tienChenhLech > 0) {
+                        //nếu lớn khách trả nhiều tiền ho thì cần trả la khách tiền
+                        hoaDon2.setTienThua(tienChenhLech);
+                    } else {
+                        //nguược lại thì không cần trả tiền thừa cho khách
+                        hoaDon2.setTienThua(0);
+                    }
+                }
+
+                hoaDonService.save(hoaDon2);
                 return ResponseEntity.ok(response);
             } else {
                 response.put("success", false);
@@ -466,8 +572,11 @@ public class HoaDonOnlController {
     public ResponseEntity<Map<String, Object>> xoaChiTiet(@PathVariable int idHoaDon, @PathVariable int idHoaDonChiTiet) {
         Map<String, Object> response = new HashMap<>();
         HoaDon hoaDon = hoaDonService.findById(idHoaDon);
-        if(hoaDon.getTrangThai()!=2||hoaDon.getTrangThai()!=3){
-            return ResponseEntity.badRequest().body(Map.of("message","Hóa đơn không thể cập nhật"));
+        if (hoaDon == null) {
+            return ResponseEntity.badRequest().body(Collections.singletonMap("message", "Không tìm thấy thông tin hóa đơn"));
+        }
+        if (hoaDon.getTrangThai() != 2 && hoaDon.getTrangThai() != 3) {
+            return ResponseEntity.badRequest().body(Map.of("message", "Hóa đơn không thể cập nhật"));
         }
         List<HoaDonChiTiet> hoaDonChiTiets = hoaDonChiTietOnlService.findHoaDonChiTietByHoaDonId(idHoaDon);
         if (hoaDonChiTiets == null) {
@@ -484,16 +593,36 @@ public class HoaDonOnlController {
         try {
             boolean deteteHDCT = hoaDonChiTietService.deleteHoaDonChiTiet(idHoaDonChiTiet);
             if (deteteHDCT == true) {
+                if (hoaDon.getTrangThai() == 3) {
+                    ChiTietSanPham chiTietSanPham = hoaDonChiTiet.getIdChiTietSanPham();
+                    chiTietSanPham.setSoLuong(chiTietSanPham.getSoLuong() + hoaDonChiTiet.getSoLuong());
+                    chiTietSanPham.setNgaySua(new Date());
+                    chiTietSanPhamService.saveChiTietSanPham(chiTietSanPham);
+                }
+                hoaDon.setTongTien(hoaDon.getTongTien() - hoaDonChiTiet.getSoLuong() * hoaDonChiTiet.getDonGia());
+                hoaDon.setNgaySua(new Date());
+                hoaDonService.tinhLaiKhuyenMai(hoaDon);
+                HoaDon hoaDon2 = hoaDonService.findById(idHoaDon);
+                hoaDon2.setThanhTien(hoaDon2.getTongTien() - hoaDon2.getTongTienGiam() + hoaDon2.getPhiShip());
+                if (hoaDon2.getLoaiThanhToan()) {
+                    float tienChenhLech = 0;
+                    //tinh so tien chenh lech neu khach đã thanh toan bang vnpay
+                    tienChenhLech = hoaDon2.getTienKhachDua() - hoaDon2.getThanhTien();
+                    if (tienChenhLech > 0) {
+                        //nếu lớn khách trả nhiều tiền ho thì cần trả la khách tiền
+                        hoaDon2.setTienThua(tienChenhLech);
+                    } else {
+                        //nguược lại thì không cần trả tiền thừa cho khách
+                        hoaDon2.setTienThua(0);
+                    }
+                }
+                hoaDonService.save(hoaDon2);
                 response.put("success", true);
+                return ResponseEntity.ok(response);
             } else {
                 response.put("success", false);
+                return ResponseEntity.ok(response);
             }
-            hoaDon.setTongTien(hoaDon.getTongTien() - hoaDonChiTiet.getSoLuong() * hoaDonChiTiet.getDonGia());
-            hoaDon.setThanhTien(hoaDon.getTongTien() - hoaDon.getTongTienGiam() + hoaDon.getPhiShip());
-            hoaDon.setNgaySua(new Date());
-            hoaDonService.save(hoaDon);
-            response.put("success", true);
-            return ResponseEntity.ok(response);
         } catch (Exception e) {
             response.put("success", false);
             response.put("message", e.getMessage());
@@ -507,61 +636,69 @@ public class HoaDonOnlController {
         try {
             int idhoadon = Integer.parseInt(formData.get("idHoaDon").toString());
             String ghichu = formData.get("ghiChu").toString();
-            int trangthai = Integer.parseInt(formData.get("trangThai").toString());
+            boolean isUndo = Boolean.parseBoolean(formData.getOrDefault("isUndo", "false").toString());
+            int trangthaiMoi = Integer.parseInt(formData.get("trangThai").toString());
+
             HoaDon hoaDon = hoaDonService.findById(idhoadon);
-            if(trangthai!=6){
-                List<HoaDonChiTiet> lstHoaDonChiTiet =hoaDonChiTietOnlService.findHoaDonChiTietByHoaDonId(idhoadon);
-                for(HoaDonChiTiet hd : lstHoaDonChiTiet){
-                    if(hd.getSoLuong()>hd.getIdChiTietSanPham().getSoLuong()){
-                        return ResponseEntity.badRequest().body(Map.of("message","Số lượng sản phẩm trong kho không đủ: Còn "+hd.getIdChiTietSanPham().getSoLuong()+"sản phẩm"));
-                    }
-                }
+            if (hoaDon == null) {
+                return ResponseEntity.badRequest().body(Map.of("message", "Hóa đơn không tồn tại"));
             }
-            if (trangthai == 3) {
-                boolean doiTT = lichSuTrnngThaiService.doiTrangThaiDonHang(idhoadon, ghichu, trangthai);
-                if (!doiTT) {
-                    return ResponseEntity.badRequest().body(Map.of("message", "Đổi trạng thái thất bại"));
-                }
-                return ResponseEntity.ok(Map.of("message", "Chờ lấy hàng"));
-            } else if (trangthai == 4) {
 
-                if (hoaDon.getTenNguoiGiao() == null || hoaDon.getTenNguoiGiao().isEmpty() || hoaDon.getSdtNguoiGiao() == null || hoaDon.getSdtNguoiGiao().isEmpty()) {
-                    return ResponseEntity.badRequest().body(Map.of("message", "Vui lòng cập nhật thông tin người giao hàng"));
-                }
-                boolean doiTT = lichSuTrnngThaiService.doiTrangThaiDonHang(idhoadon, ghichu, trangthai);
-                if (!doiTT) {
-                    return ResponseEntity.badRequest().body(Map.of("message", "Đổi trạng thái thất bại"));
-                }
-                return ResponseEntity.ok(Map.of("message", "Đang giao"));
-
-            } else if (trangthai == 5) {
-                boolean doiTT = lichSuTrnngThaiService.doiTrangThaiDonHang(idhoadon, ghichu, trangthai);
-                if (!doiTT) {
-                    return ResponseEntity.badRequest().body(Map.of("message", "Đổi trạng thái thất bại"));
-                }
-                return ResponseEntity.ok(Map.of("message", "Đã giao"));
-            } else if (trangthai == 6) {
-                boolean doiTT = lichSuTrnngThaiService.doiTrangThaiDonHang(idhoadon, ghichu, trangthai);
-                if (!doiTT) {
-                    return ResponseEntity.badRequest().body(Map.of("message", "Đổi trạng thái thất bại"));
-                }
-                return ResponseEntity.ok(Map.of("message", "Đã hủy hóa đơn"));
-            }else if(trangthai ==11){
-                boolean doiTT = lichSuTrnngThaiService.doiTrangThaiDonHang(idhoadon, ghichu, trangthai);
-                if (!doiTT) {
-                    return ResponseEntity.badRequest().body(Map.of("message", "Đổi trạng thái thất bại"));
-                }
-                return ResponseEntity.ok(Map.of("message", "Giao hàng thất bại"));
+            // Validate theo trạng thái
+            String validationError = validateStateChange(hoaDon, trangthaiMoi, isUndo);
+            if (validationError != null) {
+                return ResponseEntity.badRequest().body(Map.of("message", validationError));
             }
-            return ResponseEntity.ok(Map.of("message", "Đổi trạng thái thất bại"));
 
+            boolean success = lichSuTrnngThaiService.doiTrangThaiDonHang(
+                    idhoadon, ghichu, trangthaiMoi, isUndo);
+
+            return success
+                    ? ResponseEntity.ok(Map.of("message", isUndo ? "Hoàn tác thành công" : "Đổi trạng thái thành công"))
+                    : ResponseEntity.badRequest().body(Map.of("message", "Thao tác thất bại"));
         } catch (Exception e) {
-            // Ghi lại log lỗi để kiểm tra sau
             e.printStackTrace();
-            return ResponseEntity.badRequest().body(Map.of("message", "Đổi trạng thái thất bại"));
+            return ResponseEntity.internalServerError().body(Map.of("message", "Lỗi hệ thống"));
+        }
+    }
+
+    private String validateStateChange(HoaDon hoaDon, int trangThaiMoi, boolean isUndo) {
+        int trangThaiHienTai = hoaDon.getTrangThai();
+        List<HoaDonChiTiet> lstHoaDonChiTiet = hoaDonChiTietOnlService.findHoaDonChiTietByHoaDonId(hoaDon.getId());
+        // Kiểm tra hoàn tác
+        if (isUndo) {
+            if (trangThaiHienTai == 1) return "Không thể hoàn tác từ trạng thái ban đầu";
+            if (trangThaiMoi == 6 || trangThaiMoi == 11) return "Không thể hoàn tác về trạng thái hủy/giao thất bại";
+            return null;
         }
 
+        // Kiểm tra chuyển trạng thái bình thường
+        switch (trangThaiMoi) {
+            case 3: // Chờ lấy hàng
+                for (HoaDonChiTiet hd : lstHoaDonChiTiet) {
+                    if (hd.getSoLuong() > hd.getIdChiTietSanPham().getSoLuong()) {
+                        return "Sản phẩm " + hd.getIdChiTietSanPham().getIdSanPham().getTenSanPham() + " không đủ, chỉ còn " + hd.getIdChiTietSanPham().getSoLuong() + " sản phẩm";
+                    }
+                }
+                if (trangThaiHienTai != 2 && trangThaiHienTai != 10) {
+                    return "Chỉ có thể xác nhận từ trạng thái chờ xác nhận";
+                }
+                break;
+            case 4: // Đang giao
+                if (trangThaiHienTai != 3) return "Chỉ có thể chuyển sang đang giao từ trạng thái chờ lấy hàng";
+                if (StringUtils.isEmpty(hoaDon.getTenNguoiGiao()) || StringUtils.isEmpty(hoaDon.getSdtNguoiGiao())) {
+                    return "Vui lòng cập nhật thông tin người giao";
+                }
+                break;
+            case 6: // Hủy
+                if (trangThaiHienTai == 5 || trangThaiHienTai == 6) {
+                    return "Không thể hủy đơn ở trạng thái hiện tại";
+                }
+                break;
+        }
+        return null;
     }
+
 
     @PostMapping("/updatehoadon")
     @ResponseBody
@@ -592,10 +729,9 @@ public class HoaDonOnlController {
             hoaDon1.setDonViGiaoHang(donViGiaoHang);
             hoaDon1.setNgaySua(new Date());
             hoaDonService.save(hoaDon1);
-            return ResponseEntity.ok(Map.of("message", "Cập nhật thông tin giao hàng thành công"));
-
+            return ResponseEntity.ok(Map.of("message", "Cập nhật thông tin giao hàng thành công", "success", true));
         } catch (Exception e) {
-            return ResponseEntity.ok(Map.of("message", "Lỗi khi cập nhật thông tin đơn hàng"));
+            return ResponseEntity.badRequest().body(Map.of("message", "Lỗi khi cập nhật thông tin đơn hàng"));
         }
 
     }
@@ -677,23 +813,6 @@ public class HoaDonOnlController {
         model.addAttribute("totalPages", listHoaDonHT.getTotalPages());
 
         return "admin/hoa-don/hoadononline"; // view tương ứng
-    }
-
-
-    //end tìm kiếm hóa đơn
-
-
-    //Xác nhận hóa đơn chi tiết
-    @PostMapping("/xacnhan/{id}")
-    @ResponseBody
-    public ResponseEntity<?> xacNhanHoaDon(@PathVariable int id) {
-//        try {
-//            hoaDonChiTietOnlService.xacNhanHoaDon(id);
-//            return ResponseEntity.ok(Map.of("success", true));
-//        } catch (Exception e) {
-//            return ResponseEntity.badRequest().body(Map.of("success", false, "message", e.getMessage()));
-//        }
-        return null;
     }
 
 
@@ -840,5 +959,91 @@ public class HoaDonOnlController {
         return new ResponseEntity<>(pdfBytes, headers, HttpStatus.OK);
     }
 
+    @PostMapping("/quay-lai-trang-thai-truoc")
+    public ResponseEntity<?> quayLaiTrangThaiTruoc(@RequestParam("idHoaDon") int idHoaDon) {
+        // Lấy danh sách lịch sử trạng thái và chi tiết hóa đơn
+        List<TrangThaiDonHang> lichSu = lichSuTrnngThaiService.findByIdHoaDon_IdOrderByNgayCapNhatDesc(idHoaDon);
+        List<HoaDonChiTiet> lstHoaDonChiTiet = hoaDonChiTietOnlService.findHoaDonChiTietByHoaDonId(idHoaDon);
 
+        if (lichSu.size() < 2) {
+            return ResponseEntity.badRequest().body(Collections.singletonMap("message", "Không thể quay lại trạng thái trước"));
+        }
+
+        TrangThaiDonHang trangThaiHienTai = lichSu.get(0);
+        TrangThaiDonHang trangThaiTruoc = lichSu.get(1);
+        String tenTT=null;
+        switch (trangThaiTruoc.getTrangThai()) {
+            case 3:
+                 tenTT = "Chờ lấy hàng";
+                break;
+            case 4:
+                 tenTT = "Đang giao";
+                break;
+            case 5:
+                 tenTT = "Đã giao";
+                break;
+            case 11:
+                 tenTT = "Giao thất bại";
+                break;
+            case 6:
+                 tenTT = "Đã hủy";
+                break;
+            case 2:
+                 tenTT = "Chờ xác nhận";
+                break;
+
+        }
+        // Nhóm các chi tiết hóa đơn theo ID chi tiết sản phẩm
+        Map<Integer, Integer> tongSoLuongTheoCTSP = lstHoaDonChiTiet.stream()
+                .collect(Collectors.groupingBy(
+                        hd -> hd.getIdChiTietSanPham().getId(),
+                        Collectors.summingInt(HoaDonChiTiet::getSoLuong)
+                ));
+
+        // Xử lý cập nhật số lượng
+        if (trangThaiHienTai.getTrangThai() == 3 && trangThaiTruoc.getTrangThai() == 2 ||
+                trangThaiHienTai.getTrangThai() == 4 && trangThaiTruoc.getTrangThai() == 11||
+                trangThaiTruoc.getTrangThai()==6&&(trangThaiHienTai.getTrangThai()==3||trangThaiHienTai.getTrangThai()==4)) {
+
+            // Cộng số lượng trở lại kho
+            for (Map.Entry<Integer, Integer> entry : tongSoLuongTheoCTSP.entrySet()) {
+                ChiTietSanPham chiTietSanPham = chiTietSanPhamService.findById(entry.getKey());
+                chiTietSanPham.setSoLuong(chiTietSanPham.getSoLuong() + entry.getValue());
+                chiTietSanPhamService.saveChiTietSanPham(chiTietSanPham);
+            }
+        } else if (trangThaiHienTai.getTrangThai() == 2 && trangThaiTruoc.getTrangThai() == 3 ||
+                trangThaiHienTai.getTrangThai() == 11 && trangThaiTruoc.getTrangThai() == 4||
+                trangThaiHienTai.getTrangThai()==6&&(trangThaiTruoc.getTrangThai()==3||trangThaiTruoc.getTrangThai()==4)) {
+
+            // Kiểm tra số lượng tồn kho trước khi trừ
+            for (Map.Entry<Integer, Integer> entry : tongSoLuongTheoCTSP.entrySet()) {
+                ChiTietSanPham chiTietSanPham = chiTietSanPhamService.findById(entry.getKey());
+                if (chiTietSanPham.getSoLuong() < entry.getValue()) {
+                    return ResponseEntity.badRequest().body(Collections.singletonMap("message", "Sản phẩm " + chiTietSanPham.getIdSanPham().getTenSanPham() +
+                            " hết hàng. Chỉ còn " + chiTietSanPham.getSoLuong() + " sản phẩm"));
+                }
+            }
+
+            // Trừ số lượng từ kho sau khi đã kiểm tra đủ
+            for (Map.Entry<Integer, Integer> entry : tongSoLuongTheoCTSP.entrySet()) {
+                ChiTietSanPham chiTietSanPham = chiTietSanPhamService.findById(entry.getKey());
+                chiTietSanPham.setSoLuong(chiTietSanPham.getSoLuong() - entry.getValue());
+                chiTietSanPhamService.saveChiTietSanPham(chiTietSanPham);
+            }
+        }
+
+        // Tạo bản ghi lịch sử mới
+        TrangThaiDonHang lichSuMoi = new TrangThaiDonHang();
+        lichSuMoi.setIdHoaDon(trangThaiHienTai.getIdHoaDon());
+        lichSuMoi.setTrangThai(trangThaiTruoc.getTrangThai());
+        lichSuMoi.setNgayCapNhat(new Date());
+        lichSuMoi.setGhiChu("Quay lại trạng thái trước");
+
+        HoaDon hoaDon = hoaDonService.findById(idHoaDon);
+        lichSuTrnngThaiService.saveLichSuTrangThai(lichSuMoi);
+        hoaDon.setTrangThai(lichSuMoi.getTrangThai());
+        hoaDonService.save(hoaDon);
+
+        return ResponseEntity.ok().body(Collections.singletonMap("message", "Đã qua lại trạng thái "+tenTT));
+    }
 }
